--- a/temalar/sosero3/html/tarifler.html
+++ b/temalar/sosero3/html/tarifler.html
@@ -5,10 +5,10 @@
     <header data-gnl="23 24p" data-lg="0" >
       <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
       <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="mainmenu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+      <label for="menu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
         <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
-      <label for="menü-ana-çapraz">
+      <label for="menu-crossmain">
         <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
     </header>
