--- a/temalar/sosero3/html/hakkimizda.html
+++ b/temalar/sosero3/html/hakkimizda.html
@@ -3,12 +3,12 @@
 
     <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
-      <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
-        <img src="/temalar/sosero2/assets/img/menu/hamburger.svg" alt="">
+      <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="menu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
-      <label for="menü-ana-çapraz">
-        <img src="/temalar/sosero2/assets/img/menu/hamburger-x.svg" alt="">
+      <label for="menu-crossmain">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
     </header>
 
