--- a/temalar/sosero3/html/iletisim.html
+++ b/temalar/sosero3/html/iletisim.html
@@ -6,11 +6,11 @@
       <a class="logo" href="#">
         <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
       </a>
-      <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+      <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="menu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
         <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
-      <label for="menü-ana-çapraz">
+      <label for="menu-crossmain">
         <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
     </header>
