--- a/temalar/sosero3/html/haberler.html
+++ b/temalar/sosero3/html/haberler.html
@@ -3,11 +3,11 @@
     <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
   </a>
   <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
-  <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
-  <label for="menu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+    <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
+  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
     <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
   </label>
-  <label for="menu-crossmain">
+  <label for="menu-ana-capraz">
     <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
