--- a/temalar/sosero3/html/tesisler.html
+++ b/temalar/sosero3/html/tesisler.html
@@ -3,11 +3,11 @@
 
     <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
-      <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+      <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
         <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
-      <label for="menu-crossmain">
+      <label for="menu-ana-capraz">
         <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
     </header>
