--- a/temalar/sosero3/tesisler.html
+++ b/temalar/sosero3/tesisler.html
@@ -51,10 +51,10 @@
     
     <div data-gnl="0">
       <nav class="dallik">
-        <input id="menu" name="mainmenu" data-kapaç="çaprazlama gizle" type="radio">
+        <input id="menu" name="ana-menu" data-kapaç="çaprazlama gizle" type="radio">
         <label for="menu">•••</label>
-        <label for="menu-crossmain">✕</label>
-        <ul data-menü="dikey sağ-kaval">
+        <label for="menu-ana-capraz">✕</label>
+        <ul data-menü="dikey sag-kaval">
           <li data-lg="hide" style="margin-bottom:20px;">
             <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
               <img style="width:100px; height:auto;" src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
