--- a/temalar/sosero3/html/tarifler.html
+++ b/temalar/sosero3/html/tarifler.html
@@ -2,15 +2,17 @@
 <div data-lg="fit">
   <div data-lg="1 2p ft fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero3/assets/img/domates_corbasi.jpg') no-repeat center center; background-size:cover;">
 
-    <header data-gnl="23 24p" data-lg="0" >
-      <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
-        <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-        <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
-          <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
-        </label>
-        <label for="menu-ana-capraz">
-          <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
-        </label>
+    <header data-gnl="23 24p t" data-lg="0">
+      <a class="logo" href="#">
+        <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
+      </a>
+      <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
+      </label>
+      <label for="menu-ana-capraz">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
+      </label>
     </header>
 
   </div>
