--- a/temalar/sosero3/urunler.html
+++ b/temalar/sosero3/urunler.html
@@ -51,15 +51,15 @@
     
     <div data-gnl="0">
       <nav class="dallik">
-        <input id="menu" name="ana-menu" data-kapaç="çaprazlama gizle" type="radio">
-        <label for="menu">•••</label>
+        <input id="menu-ana" name="ana-menu" data-kapaç="çaprazlama gizle" type="radio">
+        <label for="menu-ana">•••</label>
         <label for="menu-ana-capraz">✕</label>
         <ul data-menü="dikey sag-kaval">
           <li data-lg="hide" style="margin-bottom:20px;">
-            <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
+            <a class="baş" data-gnl="0" style="padding:0 10px;" href="#">
               <img style="width:100px; height:auto;" src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
             </a>
-            <label for="menu-crossmain" onclick="document.body.classList.remove('gelgit-etkin');">
+            <label for="menu-ana-capraz" onclick="document.body.classList.remove('gelgit-etkin');">
               <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
             </label>
           </li>
