--- a/temalar/sosero3/html/haber.html
+++ b/temalar/sosero3/html/haber.html
@@ -4,7 +4,7 @@
   </a>
   <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
   <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
     <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
   </label>
   <label for="menu-ana-capraz">
@@ -12,47 +12,46 @@
   </label>
 </header>
 <main data-gnl="fit" style="padding-bottom: 20px; padding-top: 20px;">
-      <div data-gnl="o fit">
-          <article class="product full-detail product-content" data-gnl="sütun">
-            <div class="" data-lg="fit kaymadan">
-              <div data-lg="1 2p fit sütun o kaymadan">
-                <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-              </div>
-              <div class="content" data-gnl="t" data-lg="1 2p fit">
-                  <span class="date">Nisan 21, 2018</span>
-                  <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-                  <p>
-                    Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                    istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                    online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-                  </p>
-                  <p>
-                    Marmara Bölgesi’nde ve Batı Karadeniz’de 70 şubesi bulunan Peynirci
-                    Baba Yöresel Kahvaltılık Marketleri, mağazasının olmadığı lokasyonlara
-                    da online satış sitesi ile hizmet götürmeyi amaçlıyor. Peynirci
-                    Baba’nın kahvaltılık lezzetleri www.yorenizinlezzeti.com online
-                    satış platformuyla artık tüketicilerinin karşısında.
-                  </p>
-                  <p>
-                    www.yorenizinlezzeti.com online satış sitesi, Peynirci Baba
-                    mağazalarında yer alan geniş ürün gamının çoğunluğuna sahip.
-                    Minimum sipariş tutarının olmadığı alışveriş sisteminde, 100
-                    TL ve üzeri alışverişlerde ise ücretsiz kargo fırsatı var.
-                    Ödemelerin kredi kartı ile yapıldığı online alışveriş sisteminde,
-                    siparişler aynı gün kargoya veriliyor. Tüm Türkiye’ye kargo ile
-                    sipariş verilen ürünler; uzman reyon sorumluları tarafından
-                    özel paketleme sistemi ile ürünlerin sıcaklık değerlerini koruyan
-                    buz kütleleri ile hazırlanıyor.
-                  </p>
-                  <p>
-                    Kahvaltılık alışverişinizi evinizden rahatça yaparak, vakit
-                    kaybetmeden kapınıza kadar gelen hizmetin ve lezzetin tadını
-                    çıkarabilirsiniz.
-                  </p>
-
-              </div>
-            </div>
-            <div class="boş"></div>
-          </article>
+  <div data-gnl="o fit">
+    <article class="product full-detail product-content" data-gnl="sütun">
+      <div class="" data-lg="fit kaymadan">
+        <div data-lg="1 2p fit sütun o kaymadan">
+          <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+        </div>
+        <div class="content" data-gnl="t" data-lg="1 2p fit">
+          <span class="date">Nisan 21, 2018</span>
+          <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+          <p>
+            Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+            istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+            online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+          </p>
+          <p>
+            Marmara Bölgesi’nde ve Batı Karadeniz’de 70 şubesi bulunan Peynirci
+            Baba Yöresel Kahvaltılık Marketleri, mağazasının olmadığı lokasyonlara
+            da online satış sitesi ile hizmet götürmeyi amaçlıyor. Peynirci
+            Baba’nın kahvaltılık lezzetleri www.yorenizinlezzeti.com online
+            satış platformuyla artık tüketicilerinin karşısında.
+          </p>
+          <p>
+            www.yorenizinlezzeti.com online satış sitesi, Peynirci Baba
+            mağazalarında yer alan geniş ürün gamının çoğunluğuna sahip.
+            Minimum sipariş tutarının olmadığı alışveriş sisteminde, 100
+            TL ve üzeri alışverişlerde ise ücretsiz kargo fırsatı var.
+            Ödemelerin kredi kartı ile yapıldığı online alışveriş sisteminde,
+            siparişler aynı gün kargoya veriliyor. Tüm Türkiye’ye kargo ile
+            sipariş verilen ürünler; uzman reyon sorumluları tarafından
+            özel paketleme sistemi ile ürünlerin sıcaklık değerlerini koruyan
+            buz kütleleri ile hazırlanıyor.
+          </p>
+          <p>
+            Kahvaltılık alışverişinizi evinizden rahatça yaparak, vakit
+            kaybetmeden kapınıza kadar gelen hizmetin ve lezzetin tadını
+            çıkarabilirsiniz.
+          </p>
+        </div>
       </div>
+      <div class="boş"></div>
+    </article>
+  </div>
 </main>
