--- a/temalar/sosero3/html/paketler.html
+++ b/temalar/sosero3/html/paketler.html
@@ -5,7 +5,7 @@
     </a>
     <h1 class="product-name" data-md="1 3p _t hide-smaller">ÜRÜNLER</h1>
       <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
         <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
       <label for="menu-ana-capraz">
