--- a/temalar/sosero3/urun.html
+++ b/temalar/sosero3/urun.html
@@ -84,7 +84,7 @@
             </a>
           </li>
           <li>
-            <a href="satisnoktalari.html" data-ajax-getir="1">
+            <a href="satis-noktalari.html" data-ajax-getir="1">
               <i class="simge-satis-noktalari"></i><span>Satış Noktaları</span>
             </a>
           </li>
