--- a/temalar/sosero3/html/haberler.html
+++ b/temalar/sosero3/html/haberler.html
@@ -4,7 +4,7 @@
   </a>
   <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
     <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
     <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
   </label>
   <label for="menu-ana-capraz">
@@ -29,37 +29,14 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
+        <div class="kesme" data-lg="1 23p hide-smaller g">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
+            <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -75,37 +52,14 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
+        <div class="kesme" data-lg="1 23p hide-smaller g">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
+            <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -121,37 +75,14 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
+        <div class="kesme" data-lg="1 23p hide-smaller g">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-      <article class="product" data-gnl="" data-lg="1 2p">
+            <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -167,7 +98,99 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller h">
+        <div class="kesme" data-lg="1 23p hide-smaller g">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+            <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller g">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+            <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller g">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+            <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller g">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+            <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller g">
           <div class="kesit">
 
           </div>
