--- a/temalar/sosero3/html/hakkimizda.html
+++ b/temalar/sosero3/html/hakkimizda.html
@@ -1,10 +1,10 @@
 <div data-lg="fit">
-  <div data-lg="1 2p lt fit sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+  <div data-lg="1 2p ft fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero3/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
     <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
-      <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
+      <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
         <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-        <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+        <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
           <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
         </label>
         <label for="menu-ana-capraz">
@@ -14,43 +14,34 @@
 
   </div>
   <div data-lg="1 2p fit">
-    <div data-gnl="22 24p soldan-1 24p-aralık" data-lg="18 24p">
-    <article class="yemek">
-      <h1 class="yemek-adi">HAKKIMIZDA</h1>
-      <div class="yemek-içeriği">
-        <h1>YÖRE</h1>
+    <div data-gnl="22 24p left-1 24p-spacing" data-lg="18 24p">
+      <article class="yemek">
+        <h1 class="yemek-adi">HAKKIMIZDA</h1>
+        <div class="yemek-icerigi">
+          <h1>YÖRE</h1>
 
-        <p>
-          Yöre Grup; yöresel kahvaltılık gıda üretim tesislerinden perakende ve
-          toptan satışa, spor mağazalarından inşaat sektörüne uzanan çeşitliliği
-          ile farklı sektörlere yayılan dev bir şirketler topluluğudur.
-        </p>
-        <p>
-          Yöre Grup’un yenilikçilik ve yüksek kalite ilkesiyle bünyesinde bulundurduğu
-          iştirak şirketler; PEYNİRCİ BABA Kahvaltılık Marketleri, NETBA PARK Spor
-          Giyim Mağazaları, BİLBA İnşaat, PEYBA Pazarlama, PEYBA Zeytin-Turşu Fabrikası,
-          Kartepe Süt-Yoğurt Fabrikası ile Çanakkale Süt Ürünleri Fabrikası’dır.
-        </p>
-        <p>
-          Yöre Grup; kendisine bağlı üretim tesislerinde, Yöre Grup’un kuruluş felsefesinden
-          ayrılmadan üretim yapılmasını, sağlıklı ve besin değeri yüksek ürünlerin
-          kalitesinin sürekli kılınmasını sağlar. Yöre Grup çatısı altında üretimi
-          tamamlanan ürünler, yine Yöre Grup bünyesinde bulunan PEYBA Toptan Gıda
-          ve Pazarlama Şirketi ile hem yurt içi hem de yurtdışındaki A plus alıcılara
-          ulaştırılır.
-        </p>
+          <p>
+            Yöre Grup; yöresel kahvaltılık gıda üretim tesislerinden perakende ve
+            toptan satışa, spor mağazalarından inşaat sektörüne uzanan çeşitliliği
+            ile farklı sektörlere yayılan dev bir şirketler topluluğudur.
+          </p>
+          <p>
+            Yöre Grup’un yenilikçilik ve yüksek kalite ilkesiyle bünyesinde bulundurduğu
+            iştirak şirketler; PEYNİRCİ BABA Kahvaltılık Marketleri, NETBA PARK Spor
+            Giyim Mağazaları, BİLBA İnşaat, PEYBA Pazarlama, PEYBA Zeytin-Turşu Fabrikası,
+            Kartepe Süt-Yoğurt Fabrikası ile Çanakkale Süt Ürünleri Fabrikası’dır.
+          </p>
+          <p>
+            Yöre Grup; kendisine bağlı üretim tesislerinde, Yöre Grup’un kuruluş felsefesinden
+            ayrılmadan üretim yapılmasını, sağlıklı ve besin değeri yüksek ürünlerin
+            kalitesinin sürekli kılınmasını sağlar. Yöre Grup çatısı altında üretimi
+            tamamlanan ürünler, yine Yöre Grup bünyesinde bulunan PEYBA Toptan Gıda
+            ve Pazarlama Şirketi ile hem yurt içi hem de yurtdışındaki A plus alıcılara
+            ulaştırılır.
+          </p>
 
-      </div>
-    </article>
+        </div>
+      </article>
+    </div>
   </div>
 </div>
-</div>
-<script>
-
-window.benimFonk = function() {
-
-alert('Ben hakkimzda sayfasindan calisan bir JS  yim');
-
-}
-
-</script>
