--- a/temalar/sosero3/html/iletisim.html
+++ b/temalar/sosero3/html/iletisim.html
@@ -7,7 +7,7 @@
         <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
       </a>
         <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-        <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+        <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
           <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
         </label>
         <label for="menu-ana-capraz">
@@ -18,51 +18,51 @@
   </div>
   <div data-lg="1 2p fit">
     <div data-gnl="22 24p left-1 24p-spacing" data-lg="18 24p">
-    <article class="yemek" style="width:100%;">
-      <h1 class="yemek-adi">İLETİŞİM</h1>
-      <div class="yemek-içeriği" data-gnl="1 1p">
-                            <!-- https://codepen.io/uzielweb/pen/vyXqpx -->
-                            <form style="width:100%;">
+      <article class="yemek" style="width:100%;">
+        <h1 class="yemek-adi">İLETİŞİM</h1>
+        <div class="yemek-icerigi" data-gnl="1 1p">
+          <!-- https://codepen.io/uzielweb/pen/vyXqpx -->
+          <form style="width:100%;">
 
-                              <div class="form-group">
-                                <input type="text" required="required"/>
-                                <label for="input" class="control-label">ADINIZ - SOYADINIZ</label><i class="bar"></i>
-                              </div>
-                              <div class="form-group">
-                                <input type="text" required="required"/>
-                                <label for="input" class="control-label">E-POSTA ADRESİNİZ</label><i class="bar"></i>
-                              </div>
-                              <div class="form-group">
-                                <input type="text" required="required"/>
-                                <label for="input" class="control-label">TELEFON NUMARANIZ</label><i class="bar"></i>
-                              </div>
-                              <div class="form-group">
-                                <textarea required="required"></textarea>
-                                <label for="textarea" class="control-label">MESAJINIZ</label><i class="bar"></i>
-                              </div>
+            <div class="form-group">
+              <input type="text" required="required"/>
+              <label for="input" class="control-label">ADINIZ - SOYADINIZ</label><i class="bar"></i>
+            </div>
+            <div class="form-group">
+              <input type="text" required="required"/>
+              <label for="input" class="control-label">E-POSTA ADRESİNİZ</label><i class="bar"></i>
+            </div>
+            <div class="form-group">
+              <input type="text" required="required"/>
+              <label for="input" class="control-label">TELEFON NUMARANIZ</label><i class="bar"></i>
+            </div>
+            <div class="form-group">
+              <textarea required="required"></textarea>
+              <label for="textarea" class="control-label">MESAJINIZ</label><i class="bar"></i>
+            </div>
 
-                            </form>
-                            <div class="button-container" data-gnl="1 1p sağda">
-                              <button type="button" class="button"><span>GÖNDER</span></button>
-                            </div>
+          </form>
+          <div class="button-container" data-gnl="1 1p sağda">
+            <button type="button" class="button"><span>GÖNDER</span></button>
+          </div>
 
-                            <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
-                              <h3 style="color:#c70000; font-size:16px; font-weight:bold;">Ulaşım Bilgileri:</h3>
-                              <p>Yöre Grup Genel Merkez Osman Mahallesi. 641 Sokak No:14</p>
-                              <p>Gebze / KOCAELİ</p>
-                            </div>
-                            <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
-                              <h3 style="color:#c70000; font-size:16px; font-weight:bold;">İletişim Bilgileri:</h3>
-                              <p>
-                                Telefon: 0262 643 90 70
-                                <br>
-                                Faks: 0262 643 06 00
-                              </p>
-                              <h3 style="color:#c70000; font-size:16px; font-weight:bold;">E-Posta:</h3>
-                              info@yoregroup.com
-                            </div>
-      </div>
-    </article>
+          <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
+            <h3 style="color:#c70000; font-size:16px; font-weight:bold;">Ulaşım Bilgileri:</h3>
+            <p>Yöre Grup Genel Merkez Osman Mahallesi. 641 Sokak No:14</p>
+            <p>Gebze / KOCAELİ</p>
+          </div>
+          <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
+            <h3 style="color:#c70000; font-size:16px; font-weight:bold;">İletişim Bilgileri:</h3>
+            <p>
+              Telefon: 0262 643 90 70
+              <br>
+              Faks: 0262 643 06 00
+            </p>
+            <h3 style="color:#c70000; font-size:16px; font-weight:bold;">E-Posta:</h3>
+            info@yoregroup.com
+          </div>
+        </div>
+      </article>
+    </div>
   </div>
-</div>
 </div>
