--- a/temalar/sosero3/html/tarifler.html
+++ b/temalar/sosero3/html/tarifler.html
@@ -1,5 +1,3 @@
-
-<div data-lg="fit">
   <div data-lg="1 2p ft fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero3/assets/img/domates_corbasi.jpg') no-repeat center center; background-size:cover;">
 
     <header data-gnl="23 24p t" data-lg="0">
@@ -21,7 +19,7 @@
       <article class="yemek regular2 slider">
             <div>
               <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
-              <div class="yemek-içeriği">
+              <div class="yemek-icerigi">
 
                 <h2>Malzemeler</h2>
                 <ul>
@@ -56,7 +54,7 @@
             </div>
             <div>
               <h1 class="yemek-adi">DOMATES ÇORBASI 2</h1>
-              <div class="yemek-içeriği">
+              <div class="yemek-icerigi">
 
                 <h2>Malzemeler</h2>
                 <ul>
@@ -91,7 +89,7 @@
             </div>
             <div>
               <h1 class="yemek-adi">DOMATES ÇORBASI 3</h1>
-              <div class="yemek-içeriği">
+              <div class="yemek-icerigi">
 
                 <h2>Malzemeler</h2>
                 <ul>
@@ -127,7 +125,6 @@
           </article>
     </div>
   </div>
-</div>
 <script type="text/javascript">
     window.sosero = function () {
       $('.regular2').slick({
