--- a/temalar/sosero3/html/tesisler.html
+++ b/temalar/sosero3/html/tesisler.html
@@ -1,15 +1,18 @@
-<div data-lg="fit">
   <div data-lg="1 2p ft fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
     <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
-      <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
-      <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+
+      <a class="logo" href="#">
+        <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
+      </a>
+      <input id="menu-ana-capraz" data-kapaç="sağda çaprazlama" name="ana-menu" type="radio" checked="">
+      <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
         <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
       <label for="menu-ana-capraz">
         <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
+
     </header>
 
   </div>
@@ -18,7 +21,7 @@
       <article class="yemek regular2 slider">
         <div>
           <h1 class="yemek-adi">ÜRETİM TESİSLERİ</h1>
-          <div class="yemek-içeriği">
+          <div class="yemek-icerigi">
 
             <h1>Kartepe Süt ve Süt Ürünleri Fabrikası</h1>
 
@@ -45,7 +48,7 @@
         </div>
         <div>
           <h1 class="yemek-adi">ÜRETİM TESİSLERİ 2</h1>
-          <div class="yemek-içeriği">
+          <div class="yemek-icerigi">
 
             <h1>Kartepe Süt ve Süt Ürünleri Fabrikası</h1>
 
@@ -72,7 +75,7 @@
         </div>
         <div>
           <h1 class="yemek-adi">ÜRETİM TESİSLERİ 3</h1>
-          <div class="yemek-içeriği">
+          <div class="yemek-icerigi">
 
             <h1>Kartepe Süt ve Süt Ürünleri Fabrikası</h1>
 
@@ -100,7 +103,6 @@
       </article>
     </div>
   </div>
-</div>
 <script type="text/javascript">
     window.sosero = function () {
       $('.regular2').slick({
