--- a/temalar/sosero3/html/urun.html
+++ b/temalar/sosero3/html/urun.html
@@ -1,16 +1,23 @@
 <header data-gnl="_t">
+
   <a class="logo" href="#">
     <img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
   </a>
-  <h1 class="product-name" data-md="1 3p _t hide-smaller">ÜRÜN</h1>
-  <input id="menu-ana-capraz" checked="" name="ana-menu" data-kapaç="sağda çaprazlama" type="radio">
-  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+
+  <h1 class="product-name" data-md="1 3p _t hide-smaller">
+    ÜRÜN
+  </h1>
+
+  <input id="menu-ana-capraz" data-kapaç="sağda çaprazlama" name="ana-menu" type="radio" checked="">
+  <label for="menu-ana" onclick="document.body.classList.add('gelgit-etkin');">
     <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
   </label>
   <label for="menu-ana-capraz">
     <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
   </label>
+  
 </header>
+
 <main data-gnl="fit">
 <article class="product detail" data-gnl="araları-aralık">
   <div class="product-content" data-gnl="1 1p kaymadan" data-sm="fitdır">
