--- a/temalar/sosero3/html/haberler.html
+++ b/temalar/sosero3/html/haberler.html
@@ -29,14 +29,37 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller h">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+      <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -52,14 +75,37 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller h">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+      <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -75,14 +121,37 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller h">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+      <article class="product" data-gnl="" data-lg="1 2p">
         <a href="/temalar/sosero3/haber.html">
         <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
           <div data-gnl="no-overflow" style="height: 200px;">
@@ -98,99 +167,7 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
-          <div class="kesit">
-
-          </div>
-        </div>
-        </a>
-      </article>
-            <article class="product" data-gnl="" data-lg="1 2p">
-        <a href="/temalar/sosero3/haber.html">
-        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
-          <div data-gnl="no-overflow" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-          </div>
-          <div class="product-content-alt" data-gnl="t">
-              <span class="date">Nisan 21, 2018</span>
-              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-              <p>
-                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-              </p>
-          </div>
-        </div>
-        <div class="kesme" data-lg="1 23p hide-smaller g">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
