--- a/1.0/tr/ekran-orgusu.html
+++ b/1.0/tr/ekran-orgusu.html
@@ -1,9 +1,10 @@
 ---
 layout: s1n0/varsayilan
 title: Ekran Örgüsü
+description: Web tasarımları için flex uyumlu responsive frontend framework olan deveb, ekran örgüsüyle kullanıma hazır.
 ---
 <p class="girlik">
-  Minik ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
+  Saat kadar minik ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
   masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
   8 farklı adet ekran ölçeği uyarlamalı olarak kullanılır.
 </p>
