--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -3,7 +3,7 @@ layout: s1n0/varsayilan
 title: Kurulum
 ---
     <p class="girlik">
-      <span class="simget">deveb</span> çalışmalarınıza aktarılabilen kolay bir önyüz çatısıdır. Yapılması gereken dosyaları dizinleriniz arasında uygun yere kopyalamak ve html dosyalarınızda çağırmaktır. Türkçe veya İngilizce olarak geliştirilen herhangi bir sürümünü kullanabilirsiniz.
+      <span class="simget">deveb</span> kullanımı kolay bir önyüz çatısıdır. Dosyaları dizinlerin arasında uygun yere kopyalayın. Html dosyaları içinde çağırın. Türkçe veya İngilizce olarak geliştirilen sürümler isteğe bağlı olarak kullanılır.
     </p>
     <p data-gnl>
       <a data-basmal data-gnl="_o 0" class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip" style="border:1px solid purple; padding:10px;">İNDİR: deveb-s1n0.zip</a>
