--- a/temalar/sosero3/html/tarifler.html
+++ b/temalar/sosero3/html/tarifler.html
@@ -14,7 +14,7 @@
     </header>
 
   </div>
-  <div data-lg="1 2p fit">
+  <div data-lg="1 2p fit" class="ap-yok">
     <div data-gnl="22 24p left-1 24p-spacing" data-lg="18 24p">
       <article class="yemek regular2 slider">
             <div>
