--- a/temalar/sosero3/tarifler.html
+++ b/temalar/sosero3/tarifler.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body data-gnl="fullscreen" class="ap-yok">
+<body data-gnl="fullscreen">
 
   <div data-gnl="fit">
 
@@ -49,62 +49,8 @@
 
     </div>
     
-    <div data-gnl="0">
-      <nav class="dallik">
-        <input id="menu-ana" name="ana-menu" data-kapaç="çaprazlama gizle" type="radio">
-        <label for="menu-ana">•••</label>
-        <label for="menu-ana-capraz">✕</label>
-        <ul data-menü="dikey sag-kaval">
-          <li data-lg="hide" style="margin-bottom:20px;">
-            <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
-              <img style="width:100px; height:auto;" src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
-            </a>
-            <label for="menu-ana-capraz" onclick="document.body.classList.remove('gelgit-etkin');">
-              <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
-            </label>
-          </li>
-          <li>
-            <a href="urunler.html" data-ajax-getir="1">
-              <i class="simge-urunler"></i><span>Ürünler</span>
-            </a>
-          </li>
-          <li>
-            <a href="tarifler.html" data-ajax-getir="1">
-              <i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span>
-            </a>
-          </li>
-          <li>
-            <a href="tesisler.html" data-ajax-getir="1">
-              <i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span>
-            </a>
-          </li>
-          <li>
-            <a href="katalog.html" data-ajax-getir="1">
-              <i class="simge-katalog"></i><span>Katalog</span>
-            </a>
-          </li>
-          <li>
-            <a href="satis-noktalari.html" data-ajax-getir="1">
-              <i class="simge-satis-noktalari"></i><span>Satış Noktaları</span>
-            </a>
-          </li>
-          <li>
-            <a href="haberler.html" data-ajax-getir="1">
-              <i class="simge-haberler"></i><span>Haberler</span>
-            </a>
-          </li>
-          <li>
-            <a href="hakkimizda.html" data-ajax-getir="1">
-              <i class="simge-hakkimizda"></i><span>Hakkımızda</span>
-            </a>
-          </li>
-          <li>
-            <a href="iletisim.html" data-ajax-getir="1">
-              <i class="simge-iletisim"></i><span>İletişim</span>
-            </a>
-          </li>
-        </ul>
-      </nav>      <nav id="anamenu" class="dallik">
+    <div data-gnl="0">      
+      <nav id="anamenu" class="dallik">
         <input id="menu-ana" name="ana-menu" data-kapaç="çaprazlama gizle" type="radio">
         <label for="menu-ana">
           •••
