--- a/1.0/tr/goruntuluk-orgusu.html
+++ b/1.0/tr/goruntuluk-orgusu.html
@@ -1,21 +1,19 @@
 ---
 layout: s1n0/varsayilan
-title: Ekran Örgüsü
+title: Görüntülük Örgüsü
 description: Web tasarımları için flex uyumlu responsive frontend framework olan deveb, ekran örgüsüyle kullanıma hazır.
 ---
 <p class="girlik">
-  Saat kadar minik ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
-  masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
-  8 farklı adet ekran ölçeği uyarlamalı olarak kullanılır. 
+  Saat kadar minik görüntülükleri (ekranları), telefon görüntülükleri (ekranları), tablet görüntülükleri (ekranları), dizüstü görüntülükleri (ekranları), masaüstü görüntülükleri (ekranları), tv görüntülükleri (ekranları) ve dev görüntülükleri (ekranları) olarak gruplandırılmış 8 farklı adet görüntülük ölçeği uyarlamalı olarak kullanılır. 
 </p>
 <p>
-  Günümüzde, ekran ölçekleri ve ekran çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir zorunluluktur. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. <span class="simget">deveb</span> diğer çatılara göre daha fazla ekran aralığı içerir.
+  Günümüzde, görüntülük ölçekleri ve görüntülük çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir gerekliliktir. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. Bu koşullar doğrultusunda <span class="simget">deveb</span> daha çok görüntülük aralığı içerir.
 </p>
 <p></p>
 <table class="tablo">
   <thead>
     <tr>
-      <th>Ekranlar</th>
+      <th>Görüntülükler</th>
       <th>
         Genel <br>
         <i class="fa fa-minus-square-o" aria-hidden="true"></i>
@@ -60,7 +58,7 @@ description: Web tasarımları için flex uyumlu responsive frontend framework o
       <th>
         Dev <br>
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">Dev ekran</span>
+        <br><span data-metin="olumlu ince">Dev görüntülük</span>
       </th>
     </tr>
   </thead>
@@ -88,7 +86,7 @@ description: Web tasarımları için flex uyumlu responsive frontend framework o
       <td>1900px »</td>
     </tr>
     <tr>
-      <th>Ekran Seçme</th>
+      <th>Görüntülük Seçme</th>
       <td><span data-metin="ana gri">sınıf</span></td>
       <td>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
       <td colspan="5">küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
@@ -97,47 +95,47 @@ description: Web tasarımları için flex uyumlu responsive frontend framework o
   </tbody>
 </table>
 
-<h3>Ekran Yönergeleri</h3>
+<h3>Görüntülük Yönergeleri</h3>
 
 <p>
-  <span class="simget">deveb</span> ekran örgüsü küçük ekranlardan büyük ekranlara
-  doğru olmak üzere belirli bir yönde varsayılan olarak etki altına alır. Bunun
-  haricinde bazı durumlarda geçerli olmak üzere tam tersi yönde veya belirtilen
-  tek ekran önceğinde kullanımı da yapılabilir.
+  <span class="simget">deveb</span> görüntülük örgüsü küçük görüntülüklerden büyük görüntülüklere
+  doğru olmak üzere belirlenmiş bir yönde varsayılan olarak etki altına alır. Bunun
+  dışında bazı durumlarda geçerli olmak üzere tam tersi yönde veya belirtilen
+  tek görüntülük ölçeğinde kullanımı da yapılabilir.
   <br><br>
-  Örneğin bir ögeyi veya alanı dizüstü ekranlarına kadar gizlemek istiyorsanız
+  Örneğin bir ögeyi veya alanı dizüstü görüntülüklerine kadar gizlemek istiyorsanız
   <span data-metin="ana">data-ort="küçükleri-gizle"</span> olarak tanımlamanız yeterlidir.
-  Böylelikle dizüstünden küçük ekranlarda gizleme yapmış olacaksınız.
+  Böylelikle dizüstünden küçük görüntülüklerde gizleme yapmış olacaksınız.
 </p>
 
 <h4>Kullanımı</h4>
 <p>
-  Ekran örgüsü, <span class="simget">deveb</span>'in özellikleriyle iliştirilmiş
+  Görüntülük örgüsü, <span class="simget">deveb</span>'in özellikleriyle iliştirilmiş
   şekilde kullanılır. Kap örgüsünde varsayılan kural gerçeli olduğu gibi başka
-  özelliklerde daha farklı kullanıldığını görmeniz doğaldır.
+  özelliklerde daha ayrı kullanıldığını görmeniz doğaldır.
 </p>
 <h5>küçükleriyle-?</h5>
 <p>
-  Tanımlı ekran ve daha küçük ekranlar. Örnek:
+  Tanımlı görüntülükten ve daha küçük görüntülükler. Örnek:
   data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")
 </p>
 <h5>küçükleri-?</h5>
 <p>
-  Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle"
+  Belirtildiği görüntülükten küçük görüntülükleri kapsar. Örnek: data-ort="küçükleri-gizle"
   (english: data-md="hide-smaller")
 </p>
 <h5>bunu-?</h5>
 <p>
-  Belirtildiği ekranları kapsar. Örnek: data-ort="bunu-gizle"
+  Belirtildiği görüntülükleri kapsar. Örnek: data-ort="bunu-gizle"
   (english: data-md="hide-this")
 </p>
 <h5>büyükleri-?</h5>
 <p>
-  Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle"
+  Belirtildiği görüntülüklerden büyük görüntülükleri kapsar. Örnek: data-ort="büyükleri-gizle"
   (english: data-md="hide-bigger")
 </p>
 <h5>büyükleriyle-?</h5>
 <p>
-  Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek:
+  Belirtildiği görüntülükler dahil kendisinden büyük görüntülükleri kapsar. Örnek:
   data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")
 </p>
