--- a/1.0/tr/goruntuluk-orgusu.html
+++ b/1.0/tr/goruntuluk-orgusu.html
@@ -4,7 +4,7 @@ title: Görüntülük Örgüsü
 description: Web tasarımları için flex uyumlu responsive frontend framework olan deveb, ekran örgüsüyle kullanıma hazır.
 ---
 <p class="girlik">
-  Saat kadar minik görüntülükleri (ekranları), telefon görüntülükleri (ekranları), tablet görüntülükleri (ekranları), dizüstü görüntülükleri (ekranları), masaüstü görüntülükleri (ekranları), tv görüntülükleri (ekranları) ve dev görüntülükleri (ekranları) olarak gruplandırılmış 8 farklı adet görüntülük ölçeği uyarlamalı olarak kullanılır. 
+  Saat kadar minik görüntülükleri (ekranları), telefon görüntülükleri, tablet görüntülükleri, dizüstü görüntülükleri, masaüstü görüntülükleri, tv görüntülükleri ve dev görüntülükleri olarak gruplandırılmış 8 farklı adet görüntülük ölçeği uyarlamalı olarak kullanılır. 
 </p>
 <p>
   Günümüzde, görüntülük ölçekleri ve görüntülük çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir gerekliliktir. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. Bu koşullar doğrultusunda <span class="simget">deveb</span> daha çok görüntülük aralığı içerir.
